Google oAuth remove dev

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Find the best food in the world. Food reviews by chefs & food lovers." />
+    <meta name="description" content="Find the best food in the world. Food reviews by chefs & gourmets." />
     
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
